--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          repository: cloudacademy/labs-cli
+          path: labs-cli
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          repository: cloudacademy/labs-cli-helpers
+          path: labs-cli-helpers
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Set outputs
         id: vars
