--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout lab repository
+        uses: actions/checkout@v4
         with:
           repository: cloudacademy/labs-cli
           path: labs-cli
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout helper repository
+        uses: actions/checkout@v4
         with:
           repository: cloudacademy/labs-cli-helpers
           path: labs-cli-helpers
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Set outputs
         id: vars
