--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - run: |
+          ls ${{ github.workspace }}
+      - run: |
+          ls ${{ github.workspace }}/labs-cli
+      - run: |
+          ls ${{ github.workspace }}/labs-cli-helpers
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
